<resources>
    <string name="app_name">Football Quiz</string>
    <string name="play">Graj</string>
    <string name="world_cup">Mistrzostwa Świata</string>
    <string name="champions_legaue">Liga Mistrzów</string>
    <string name="polish_football">Polska piłka</string>
    <string name="curiosities">Ciekawostki</string>
    <string name="category">Wybierz kategorię:</string>
    <string name="next">Kontynuuj →</string>
    <string name="once_more">Jeszcze raz</string>
    <string name="close">Zamknij</string>
    <string name="choose_category">Wybierz kategorię</string>
    <string name="question">%1$s/%2$s \n %3$s</string>
    <string name="question2">Kto był trenerem reprezentacji Polski w 1974, kiedy to Biało-Czerwoni zajęli 3. miejsce na mundialu w RFN?</string>
    <string name="answerA">%1$s</string>
    <string name="answerB">%1$s</string>
    <string name="answerC">%1$s</string>
    <string name="answerD">%1$s</string>
    <string name="questionNum">%1$d/%2$d</string>
    <string name="result">%1$s\n\n%2$s pkt.\n %3$s%%</string>
    <string name="correctAnswer">Poprawna odpowiedź: %1$s</string>
    <string name="menu">← nowa gra</string>
    <string name="sound_description">Sound image</string>
    <string name="music_description">Music image</string>
    <string name="share">Udostępnij</string>
    <string name="ok">OK</string>
    <string name="info">Odpowiedź:\n%1$s\n\n %2$s</string>
</resources>