<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnShare"
        style="@style/ButtonVertical"
        android:backgroundTint="@color/blue"
        android:text="@string/share"
        app:layout_constraintBottom_toTopOf="@+id/btnOnceMore"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnOnceMore"
        style="@style/ButtonVertical"
        android:text="@string/once_more"
        app:layout_constraintBottom_toTopOf="@+id/btnClose"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <Button
        android:id="@+id/btnClose"
        style="@style/ButtonVertical"
        android:backgroundTint="@color/red"
        android:text="@string/close"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textPoints"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="@dimen/big_margin"
        android:background="@color/white"
        android:text="@string/result"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/textSize40"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/btnShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>