<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:textAlignment="center"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnNext"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:backgroundTint="@color/orange"
        android:padding="@dimen/padding_10"
        android:text="@string/next"
        android:textSize="@dimen/textSizeSmall"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnMenu"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswerD"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnMenu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:backgroundTint="@color/orange"
        android:padding="@dimen/padding_10"
        android:text="@string/menu"
        android:textSize="@dimen/textSizeSmall"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnNext"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswerC" />

    <TextView
        android:id="@+id/textQuestion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:background="@color/white"
        android:padding="@dimen/padding_10"
        android:text="@string/question2"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="@dimen/textSizeBig"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <Button
        android:id="@+id/btnAnswerA"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:padding="@dimen/padding_10"
        android:text="@string/answerA"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswerC"
        app:layout_constraintEnd_toStartOf="@+id/btnAnswerB"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuestion"
        tools:ignore="DuplicateSpeakableTextCheck,DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/btnAnswerB"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:padding="@dimen/padding_10"
        android:text="@string/answerB"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/btnAnswerD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAnswerA"
        app:layout_constraintTop_toBottomOf="@+id/textQuestion" />

    <Button
        android:id="@+id/btnAnswerC"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:padding="@dimen/padding_10"
        android:text="@string/answerC"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/btnMenu"
        app:layout_constraintEnd_toStartOf="@+id/btnAnswerD"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswerA" />

    <Button
        android:id="@+id/btnAnswerD"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/small_margin"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:layout_marginBottom="@dimen/small_margin"
        android:padding="@dimen/padding_10"
        android:text="@string/answerD"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/btnNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnAnswerC"
        app:layout_constraintTop_toBottomOf="@+id/btnAnswerB" />

    <ImageButton
        android:id="@+id/btnSound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:backgroundTint="@color/light_yellow"
        android:contentDescription="@string/sound_description"
        app:layout_constraintEnd_toStartOf="@+id/musicImage"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/sound_on" />

    <ImageButton
        android:id="@+id/musicImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/small_margin"
        android:layout_marginEnd="@dimen/small_margin"
        android:backgroundTint="@color/light_yellow"
        android:contentDescription="@string/music_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/music_on" />


</androidx.constraintlayout.widget.ConstraintLayout>