<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnWorldCup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btnBigHeight"
        android:text="@string/world_cup"
        android:textSize="@dimen/textSizeBig"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.32" />

    <Button
        android:id="@+id/btnChampionsLeague"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btnBigHeight"
        android:text="@string/champions_legaue"
        android:textSize="@dimen/textSizeBig"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52" />

    <Button
        android:id="@+id/btnPolishFootball"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btnBigHeight"
        android:text="@string/polish_football"
        android:textSize="@dimen/textSizeBig"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.72" />

    <Button
        android:id="@+id/btnCuriosities"
        android:layout_width="match_parent"
        android:layout_height="@dimen/btnBigHeight"
        android:text="@string/curiosities"
        android:textSize="@dimen/textSizeBig"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.92" />


</androidx.constraintlayout.widget.ConstraintLayout>